...
    ) {
        ToolButton(
            tool = DrawingTool.PENCIL,
            icon = R.drawable.ic_pen,
            isSelected = selectedTool == DrawingTool.PENCIL,
            onClick = { onToolSelected(DrawingTool.PENCIL) },
            tag = TestTags.toolTag(DrawingTool.PENCIL)
        )
        ToolButton(
            tool = DrawingTool.ERASER,
            icon = R.drawable.ic_eraser,
            isSelected = selectedTool == DrawingTool.ERASER,
            onClick = { onToolSelected(DrawingTool.ERASER) },
...
